Fix splash image position and navbar on mobiles

--- a/custom.css
+++ b/custom.css
@@ -6,17 +6,20 @@ body#home {
     padding-top: 0;
 }
 
-.navbar-default {
-    background-color: rgb(44, 62, 80);
-    border-color: transparent;
+.navbar {
     -webkit-transition: background-color .3s ease-in;
     transition: background-color .3s ease-in;
 }
 
-.navbar-transparent {
-    background-color: rgba(44, 62, 80, 0.3);
-    -webkit-transition: background-color .3s ease-in;
-    transition: background-color .3s ease-in;
+.navbar-default {
+    background-color: rgb(44, 62, 80);
+    border-color: transparent;
+}
+
+@media all and (min-width: 768px) {
+    .navbar-transparent {
+        background-color: rgba(44, 62, 80, 0.3);
+    }
 }
 
 .navbar-brand > img {
@@ -55,6 +58,7 @@ body#home {
 .splash {
     background-image: url(header.jpg);
     background-size: cover;
+    background-attachment: fixed;
     height: 450px;
     margin-bottom: 20px;
 }
